[package]
name = "top-cap"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8"}
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.2"
